# clipper

./: .env.example  .gitignore  CONTEXT.md  README.md  pyproject.toml
.loop/: .gitignore
.ralph/: .gitignore
clipper/: __init__.py  artifacts.py  cli.py  config.py  contact_sheet.py  cutting.py  montage.py  order.py  pipeline.py  progress.py  schemas.py  scoring.py  shots.py  transcription.py  visual.py
docs/adr/: 0001-video-workspaces-as-cli-contract.md  0002-core-first-monorepo-surfaces.md
plans/: PRD-transcript-visual-scoring.md  PRD.md  editorial-order-workflow.md
plans/issues/: 001-project-foundation.md  002-config-schemas-and-artifacts.md  003-doctor-command.md  004-media-input-and-download.md  004-start-video.md  005-transcription.md  005.1-transcription-verbose-progress.md  006-llm-scoring.md  006.1-scoring-verbose-progress.md  007-generated-video-fixtures.md  008-cut-clips.md  009-montage-assembly.md  010-pipeline-orchestrator.md  011-cli-polish-and-docs.md  012-final-verification-and-closeout.md  013-word-timestamp-transcription.md  (+28 more)
tests/: test_cli.py  test_issue002.py  test_issue004.py  test_issue005.py  test_issue006.py  test_issue007.py  test_issue008.py  test_issue009.py  test_issue010.py  test_issue014.py  test_issue015.py  test_issue016.py  test_issue017.py  test_issue018.py  test_issue028.py  test_issue029.py  test_issue030.py  test_issue031.py  test_issue032.py  test_issue033.py  test_issue034.py  test_issue035.py  test_issue037.py  test_issue038.py  test_issue040.py  test_issue041.py  test_project_outputs.py  test_score_time_range.py
(+240 files in other folders)
