[project]
name = "clipper"
version = "0.1.0"
description = "Local-first CLI toolkit for turning long videos or podcasts into scored clips and montages."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yt-dlp",
    "faster-whisper",
    "openai",
    "python-dotenv",
    "questionary",
    "scenedetect",
]

[project.scripts]
clipper = "clipper.cli:main"

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
